ol list align fixed on responsive mode

--- a/css/style.css
+++ b/css/style.css
@@ -90,8 +90,15 @@ header {
         float: none;
     }
 
-    li h3 {
-        padding-right: 30px;
+    ol {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        flex-grow: 1;
+        padding: 0;
+        justify-content: space-between;
+        align-items: center;
+        text-align: left;
     }
 }
 
